# age

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  notes.txt
commands/: commands.cpp  commands.h
game/: constants.h  entity.cpp  entity.h  ground.cpp  ground.h  gst.cpp  gst.h  load.cpp  load.h  menu.cpp  menu.h  player.h  playercontrol.cpp  playercontrol.h  tech.cpp  tech.h  tile.h  view.cpp  view.h
game/ai/: action.cpp  action.h  engine.h  evaluator.h  generator.h  performer.h  tactic.h
graphics/: cam.h  graphics.cpp  graphics.h
timing/: timing.cpp  timing.h
umath/: intersect.h  vec2.h
